feat: support custom and importable skills
